charts/region/spring-petclinic-config/templates/app/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: spring-petclinic
  namespace: devsecops-dev
  labels:
    app: spring-petclinic
    argocd.argoproj.io/instance: spring-petclinic
spec:
  host: >-
    spring-petclinic-devsecops-dev.apps.lc-single-devsecops-b45c-1.blueprints.rhecoeng.com
  to:
    kind: Service
    name: spring-petclinic
    weight: 100
  port:
    targetPort: 8443-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
